# hue-control

./: .gitignore  .pre-commit-config.yaml  README.md  auto_color.html  characteristics.ini  color.py  color2.py  control.py  main.py  payload_decode.md  probe.py  pyproject.toml  scan.py  set_char.py
.github/workflows/: ci.yml  publish.yml
lib/: __init__.py  hue.py  models.py  parsers.py
scripts/: delete_alarms.py  enable_alarms.py  read_alarms.py  set_characteristic.py  subscribe_all.py
src/huec/: main.py
src/huec/lib/: hue.py  models.py  parsers.py
src/huec/scripts/: __init__.py  set_characteristic.py  subscribe_all.py  update_readme_usage.py
tests/: test_enable_alarm.py  test_hue_contracts.py  test_models.py  test_read_alarms.py
