[project]
name = "huec"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=2.1.1",
]

[project.scripts]
huec = "huec.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E722"]

[tool.ruff.lint.isort]
known-first-party = ["lib", "scripts"]

[dependency-groups]
dev = [
    "markdown-it-py>=4.0.0",
    "pytest>=9.0.2",
]
